Update cheatsheet license to Creative Commons

--- a/docs/cheatsheet/cheatsheet.tex
+++ b/docs/cheatsheet/cheatsheet.tex
@@ -182,7 +182,7 @@ system for baud rate (normally 115200).
 
 \footnotesize{
 \copyright 2017 Nerves Project developers
-\par Released under the Apache License 2.0.
+\par Released under the CC-BY-4.0.
 }
 
 %----------------------------------------------------------------------------------------
